# process-tab-manager

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN-phase2.2-rename-groups.md  PLAN.md  README.md  STATUS.md  install.sh  run.sh  style.css  uninstall.sh
assets/: process-tab-manager.desktop
frontend/: index.html  main.js  style.css
ptm-core/: Cargo.toml
ptm-core/src/: bridge.rs  filter.rs  lib.rs  state.rs
ptm-core/src/x11/: actions.rs  connection.rs  ewmh.rs  monitor.rs
ptm-core/tests/: bridge_test.rs  config_test.rs  ewmh_test.rs  filter_test.rs  geometry_test.rs  state_test.rs
run/: package-lock.json  package.json
src/: app.rs  bridge.rs  config.rs  filter.rs  geometry.rs  icon_cache.rs  lib.rs  main.rs  row.rs  sidebar.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: icon_resolver.rs  lib.rs  main.rs  x11_monitor.rs
src/x11/: actions.rs  connection.rs  ewmh.rs  mod.rs
test/: tauri-e2e-runner.sh  tauri-e2e-test.sh  vm-e2e-runner.sh  vm-e2e-test.sh
test/css-probe/: Cargo.toml  style.css
test/css-probe/src/: main.rs
test/e2e/: package-lock.json  package.json  wdio.conf.js
test/e2e/helpers/: dom.js  events.js  state.js  xterm.js
test/e2e/pageobjects/: context-menu.page.js  rename.page.js  sidebar.page.js
test/e2e/specs/: context-menu.e2e.js  focus-click.e2e.js  persistence.e2e.js  rename.e2e.js  reorder.e2e.js  selection.e2e.js  snap-alignment.e2e.js  theme.e2e.js  window-list.e2e.js
test/tauri-prototype/: build.sh  drag-test.sh  e2e-test.sh  e2e-validate.sh
test/tauri-prototype/src/: main.js
test/tauri-prototype/src-tauri/: Cargo.toml  tauri.conf.json
test/tauri-prototype/src-tauri/src/: lib.rs  main.rs
test/wdio-prototype/: package-lock.json  wdio.conf.js
test/wdio-prototype/test/: rename.e2e.js
tests/: bridge_test.rs  config_test.rs  ewmh_test.rs  filter_test.rs  geometry_test.rs  state_test.rs
