[package]
name = "process-tab-manager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Vertical sidebar for managing application windows on Linux/X11"

[dependencies]
gtk4 = "0.10"
gdk4 = "0.10"
glib = "0.20"
gio = "0.20"
x11rb = { version = "0.13", features = ["extra-traits"] }
x11rb-protocol = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "spike-x11"
path = "src/bin/spike_x11.rs"

[[bin]]
name = "spike-gtk"
path = "src/bin/spike_gtk.rs"

[[bin]]
name = "spike-bridge"
path = "src/bin/spike_bridge.rs"
