[package]
name = "process-tab-manager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Vertical sidebar for managing application windows on Linux/X11"

[dependencies]
gtk4 = "0.10"
gdk4 = "0.10"
glib = "0.21"
gio = "0.21"
x11rb = { version = "0.13", features = ["extra-traits"] }
x11rb-protocol = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
