[package]
name = "ptm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
x11rb = { version = "0.13", features = ["extra-traits"] }
x11rb-protocol = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
anyhow = "1"
thiserror = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
