[package]
name = "process-tab-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ptm-core = { path = "../ptm-core" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
dirs = "6"
x11rb = { version = "0.13", features = ["extra-traits"] }
x11rb-protocol = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
tauri-build = "2"
